--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT = 4000
-DATABASE = mongodb+srv://bits:bits@personal-financial-appl.xtvzti0.mongodb.net/WiseWallet?retryWrites=true&w=majority
+DATABASE = mongodb+srv://plqanh:TkL6SBTxhAMRyjga@cluster0.aw6plh2.mongodb.net/?retryWrites=true&w=majority
+
+# mongodb+srv://bits:bits@personal-financial-appl.xtvzti0.mongodb.net/WiseWallet?retryWrites=true&w=majority
