--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 PORT = 4000
 DATABASE = mongodb+srv://bits:bits@personal-financial-appl.xtvzti0.mongodb.net/WiseWallet?retryWrites=true&w=majority
+EXPIRE_TOKEN = 1*60*60*1000
+SESSION_SECRET = secret_key
+JWT_SECRET = JVCBHFJERB24Y3WHDJBCD
